--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,10 +66,7 @@ const socialCount = SkiCycleRunConfig.socials.filter(
     {
       featuredPosts.length > 0 && (
         <>
-          <section
-            id="featured"
-            class="max-w-screen-lg mx-auto w-full px-4 mt-8"
-          >
+          <section id="featured" class="max-w-5xl mx-auto w-full px-4 mt-8">
             <h2 class="mb-6 text-2xl md:text-3xl font-bold">Featured Topics</h2>
             <div class="flex flex-col gap-6">
               {featuredPosts.map((post, index) => (
